--- a/MVVMPractice/MVVMPractice.csproj
+++ b/MVVMPractice/MVVMPractice.csproj
@@ -56,6 +56,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Command\RelayCommand.cs" />
+    <Compile Include="Converter\DateConverter.cs" />
     <Compile Include="ViewModel\PersonViewModel.cs" />
     <Page Include="View\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
